@@ -6,6 +6,7 @@ ART 3.7
 * Fix for documentation link not working
 * Updated pt_BR translation
 * Fix for save not working with pivottable.js report run using run in new page option
+* Fix for report source not being displayed in quick edit section
 * Updated jclouds, pivottable.js, ucanaccess
 
 ART 3.6
